@@ -5,6 +5,7 @@ import org.dom4j.Attribute;
 import org.dom4j.Element;
 
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.ParameterizedType;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -39,14 +40,15 @@ public final class Xml2ObjectParseUtil {
                 .collect(Collectors.toMap(Attribute::getName, Attribute::getValue, (o, n) -> n));
 
         try {
-            D result = clazz.newInstance();
+            D result = clazz.getDeclaredConstructor().newInstance();
             Field[] fields = result.getClass().getDeclaredFields();
 
             for (Field field : fields) {
                 // reflection utils force set the field value
                 ReflectionUtils.makeAccessible(field);
                 boolean existAttribute = attributeMap.containsKey(field.getName());
-                if (existAttribute) {
+                // exist attribute  or  not child element(not assign collection)
+                if (existAttribute || !Collection.class.isAssignableFrom(field.getType())) {
                     field.set(result, attributeMap.get(field.getName()));
                 } else {
                     // child element search the field
@@ -70,6 +72,8 @@ public final class Xml2ObjectParseUtil {
             return result;
         } catch (InstantiationException e) {
 
+        } catch (NoSuchMethodException | InvocationTargetException e) {
+            e.printStackTrace();
         }
         return null;
     }
